derive/tests/snapshots/timestamps/Signature/create_signature.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `signature` table.
    pub fn create_signature<'a>(
        &'a self,
        signature: CreateSignature,
    ) -> Result<Signature, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let value = signature.value;
        let created_at = self
            .ctx()
            .timestamp()
            .expect("a `WriteContext` always has a timestamp");
        let modified_at = self
            .ctx()
            .timestamp()
            .expect("a `WriteContext` always has a timestamp");
        let signature = Signature {
            id,
            value,
            created_at,
            modified_at,
        };
        match self.db().signature().try_insert(signature.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "signature".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ signature : {:?} }}", signature
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "signature".into(),
                        })
                    }
                }
            }
        }
    }
}
