derive/tests/snapshots/timestamps/Signature/get_all_signatures.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `signature` table.
    pub fn get_all_signatures<'a>(&'a self) -> impl Iterator<Item = Signature> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().signature().iter()
    }
}
